--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>One Click Link Shortener</title>
+    
+    <!-- ✅ Title Optimization -->
+    <title>Free URL Shortener | One-Click Link Shortening</title>
+
+    <!-- ✅ Meta Description for SEO -->
+    <meta name="description" content="Shorten your long URLs instantly with our free, fast, and secure one-click URL shortener. Share and manage links effortlessly!" />
+
+    <!-- ✅ Keywords for Better Ranking -->
+    <meta name="keywords" content="URL shortener, free link shortener, short links, one-click URL, bitly alternative, TinyURL alternative" />
+
+    <!-- ✅ Canonical Tag (Avoids Duplicate Content Issues) -->
+    <link rel="canonical" href="https://shortlink.1clk.xyz/" />
+
+    <!-- ✅ Open Graph Meta Tags (for Facebook, LinkedIn) -->
+    <meta property="og:title" content="Free URL Shortener | One-Click Link Shortening" />
+    <meta property="og:description" content="Shorten your URLs quickly and easily. Free, secure, and fast URL shortening service!" />
+    <meta property="og:url" content="https://shortlink.1clk.xyz/" />
+    <meta property="og:type" content="website" />
+
+    <!-- ✅ Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Free URL Shortener | One-Click Link Shortening" />
+    <meta name="twitter:description" content="Shorten and share your links with ease. The best free URL shortener alternative to Bitly and TinyURL!" />
+
+    <!-- ✅ Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Images/favicon.png" />
+    
+    <!-- ✅ Robots Tag (Control Indexing) -->
+    <meta name="robots" content="index, follow" />
+
   </head>
   <body>
     <div id="root"></div>
